--- a/cfn-cbl.yaml
+++ b/cfn-cbl.yaml
@@ -19,10 +19,10 @@ Parameters:
   BucketName:
     Type: String
     Description: S3 BucketName * Must be unique to AWS *
-    MinLength: 6
+    MinLength: 3
     MaxLength: 63
-    AllowedPattern: ^([a-z]|(\d(?!\d{0,2}\.\d{1,3}\.\d{1,3}\.\d{1,3})))([a-z\d]|(\.(?!(\.|-)))|(-(?!\.))){1,61}[a-z\d\.]$
-  DaysTillTransition:
+    AllowedPattern: ^([a-z]|(\d(?!\d{0,2}\.\d{1,3}\.\d{1,3}\.\d{1,3})))([a-z\d]|(\.(?!(\.|-)))|(-(?!\.))){1,61}[a-z\d]$  
+DaysTillTransition:
     Type: Number
     Default: 1
     Description: Number of days to stay in S3 before being moved to glacier
