--- a/cfn-cbl.yaml
+++ b/cfn-cbl.yaml
@@ -10,19 +10,19 @@ Description: 'Cloudformation template to set up neccessary resources for
     to abort incomplete multipart uploads after 7 days'
 Parameters:
   Identifier:
+    AllowedPattern: '^[a-zA-Z0-9.-]*$'
     Type: String
     Description: 'Enter account identifier (customername, servername, etc.)
         * Must be unique to your AWS Account *'
     MinLength: 1
     MaxLength: 41
-    AllowedPattern: ^[a-zA-Z0-9]*$
   BucketName:
+    AllowedPattern: '^([a-z]|(\d(?!\d{0,2}\.\d{1,3}\.\d{1,3}\.\d{1,3})))([a-z\d]|(\.(?!(\.|-)))|(-(?!\.))){1,61}[a-z\d]$'
     Type: String
     Description: S3 BucketName * Must be unique to AWS *
     MinLength: 3
     MaxLength: 63
-    AllowedPattern: ^([a-z]|(\d(?!\d{0,2}\.\d{1,3}\.\d{1,3}\.\d{1,3})))([a-z\d]|(\.(?!(\.|-)))|(-(?!\.))){1,61}[a-z\d]$  
-DaysTillTransition:
+  DaysTillTransition:
     Type: Number
     Default: 1
     Description: Number of days to stay in S3 before being moved to glacier
